--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.15.3",
         "bootstrap": "5.0.0",
+        "glob-parent": "^5.1.2",
         "jquery": "3.6.0",
         "jquery.easing": "^1.4.1",
-        "simple-line-icons": "2.5.5"
+        "simple-line-icons": "2.5.5",
+        "trim-newlines": "^1.0.0"
     },
     "devDependencies": {
         "browser-sync": "2.26.14",
